<resources>
    <string name="app_name">Pokemon</string>

    <string name="splash_screen_pokemon_image">SplashScreenImage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pokemon">POKEMON</string>
    <string name="list">LIST</string>
    <string name="pikachu">Pickachu</string>
    <string name="height">Height : </string>
    <string name="weight">Weight : </string>
    <string name="candy">Candy : </string>
    <string name="candy_count">Candy Count : </string>
    <string name="egg">Egg : </string>
    <string name="spawn_chance">Spawn Chance : </string>
    <string name="Avg_spawn">Average Spawn : </string>
    <string name="spawn_time">Spawn Time : </string>
    <string name="type">Type</string>
    <string name="weakness">Weakness</string>
    <string name="prev_evol">Previous Evolution</string>
    <string name="next_evol">Next Evolution</string>
    <string name="balbasur">Balbasur</string>






</resources>