<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Details_Pokemon"
    android:background="@drawable/backgrount_gradient">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">

       <de.hdodenhof.circleimageview.CircleImageView
           android:id="@+id/pokemon_image"
           android:src="@drawable/ic_launcher_background"
           android:layout_centerHorizontal="true"
           android:layout_gravity="center_horizontal"
           android:layout_alignTop="@+id/list_view"
           app:civ_border_color="@color/pokemonNavyBlue"
           app:civ_border_width="5dp"
           android:layout_marginTop="10dp"
           android:layout_width="150dp"
           android:layout_height="150dp"></de.hdodenhof.circleimageview.CircleImageView>
       <ScrollView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp"
           android:layout_marginBottom="16dp"
           android:id="@+id/list_view">

       <androidx.cardview.widget.CardView
           android:id="@+id/card_view"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginLeft="16dp"
           android:layout_marginRight="16dp"
           android:layout_marginBottom="16dp"
           android:layout_marginTop="10dp"
           android:background="@drawable/cardview_style"
           app:cardElevation="0dp"
           app:cardCornerRadius="8dp"
           app:cardBackgroundColor="@color/white"

           >
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:gravity="center_horizontal"
               android:layout_marginBottom="8dp"

               android:layout_marginTop="8dp"

               >
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/name"
                   android:text="@string/pikachu"
                   android:textSize="20sp"
                   android:textStyle="bold"
                   ></TextView>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/height"
                   android:text="@string/height"
                   android:textSize="12sp"
                   android:layout_margin="5dp"
                   android:textStyle="bold"
                   ></TextView>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/weight"
                   android:text="@string/weight"
                   android:textSize="12sp"
                   android:layout_margin="5dp"
                   android:textStyle="bold"
                   ></TextView>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/candy"
                   android:text="@string/candy"
                   android:textSize="12sp"
                   android:layout_margin="5dp"
                   android:textStyle="bold"
                   ></TextView>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/candy_count"
                   android:text="@string/candy_count"
                   android:textSize="12sp"
                   android:layout_margin="5dp"
                   android:textStyle="bold"
                   ></TextView>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/egg"
                   android:text="@string/egg"
                   android:textSize="12sp"
                   android:layout_margin="5dp"
                   android:textStyle="bold"
                   ></TextView>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/spawn_chance"
                   android:text="@string/spawn_chance"
                   android:textSize="12sp"
                   android:layout_margin="5dp"
                   android:textStyle="bold"
                   ></TextView>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/average_spawn"
                   android:text="@string/Avg_spawn"
                   android:textSize="12sp"
                   android:layout_margin="5dp"
                   android:textStyle="bold"
                   ></TextView>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/spawn_time"
                   android:text="@string/spawn_time"
                   android:textSize="12sp"
                   android:layout_margin="5dp"
                   android:textStyle="bold"
                   ></TextView>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/type"
                   android:text="@string/type"
                   android:layout_marginBottom="8dp"
                   android:textSize="16sp"
                   android:textStyle="bold"
                   ></TextView>

               <androidx.recyclerview.widget.RecyclerView
                   android:id="@+id/recycler_type"
                   android:layout_marginBottom="8dp"
                   android:layout_width="match_parent"
                   android:layout_height="40dp"
                   android:layout_marginLeft="10dp"

                   ></androidx.recyclerview.widget.RecyclerView>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/Weakness"
                   android:text="@string/weakness"
                   android:layout_marginBottom="8dp"
                   android:textSize="16sp"
                   android:textStyle="bold"
                   ></TextView>

               <androidx.recyclerview.widget.RecyclerView
                   android:id="@+id/recycler_weakness"
                   android:layout_marginBottom="8dp"
                   android:layout_width="match_parent"
                   android:layout_height="40dp"
                   android:layout_marginLeft="10dp"
                   ></androidx.recyclerview.widget.RecyclerView>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/evolution"
                   android:text="@string/prev_evol"
                   android:layout_marginBottom="8dp"
                   android:textSize="16sp"
                   android:textStyle="bold"
                   ></TextView>

               <androidx.recyclerview.widget.RecyclerView
                   android:id="@+id/recycler_prev_evolution"
                   android:layout_marginBottom="8dp"
                   android:layout_width="match_parent"
                   android:layout_height="40dp"
                   android:layout_marginLeft="10dp"

                   ></androidx.recyclerview.widget.RecyclerView>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/next_evolution"
                   android:text="@string/next_evol"
                   android:layout_marginBottom="8dp"
                   android:textSize="16sp"
                   android:textStyle="bold"
                   ></TextView>

               <androidx.recyclerview.widget.RecyclerView
                   android:id="@+id/recycler_next_evolution"
                   android:layout_width="match_parent"
                   android:layout_height="40dp"
                   android:layout_marginLeft="10dp"

                   ></androidx.recyclerview.widget.RecyclerView>


           </LinearLayout>

       </androidx.cardview.widget.CardView>
       </ScrollView>




   </LinearLayout>
</RelativeLayout>